Modernize collections in tests